--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
               mantienen
               actualizados <br> y
               hacen crecer sus carreras.</p>
-            <a href="#" class="btn btn-outline-primary w-100 fw-bold fs-5" id="boton-card-1">Crear cuenta</a>
-            <button type="button" class="btn btn-outline-primary w-100 border-0 mt-3 fs-5" id="boton-card-2">log
-              in</button>
+            <a href="./createAcaunt.html" class="btn btn-outline-primary w-100 fw-bold fs-5" id="boton-card-1">Crear
+              cuenta</a>
+            <a href="./login.html" class="text-decoration-none"><button type="button"
+                class="btn btn-outline-primary w-100 border-0 mt-3 fs-5" id="boton-card-2">log
+                in</button></a>
 
           </div>
         </div>
