--- a/index.html
+++ b/index.html
@@ -321,10 +321,8 @@
         </div>
       </div>
 
-
-
-
-      <div class="col-lg-4 d-none d-md-block mt-4">
+      <!--lau-->
+      <div class="hashtagList col-md-4 d-md-block d-none mt-4">
         <ul class="list-group ">
 
           <li class="list-group-item disabled" aria-disabled="true">
@@ -374,6 +372,10 @@
           </li>
 
         </ul>
+
+
+
+
 
         <!--aside right si fondo ni border-->
 
@@ -445,20 +447,26 @@
 
 
       </div>
-
-
-
-
-
     </div>
 
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-    <script src="./js/main.js" type="module"></script>
-    <script src="./js/botones.js"></script>
-    <script src="./js/module.js" type="module"></script>
+
+
+
+
+
+
+
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="./js/main.js" type="module"></script>
+  <script src="./js/botones.js"></script>
+  <script src="./js/module.js" type="module"></script>
 </body>
 
 </html>
