--- a/loged.html
+++ b/loged.html
@@ -367,43 +367,61 @@
                 </div>
             </div>
 
-            <div class="hashtagList col-md-4 d-md-block d-none mt-0">
-                <div class="cardList" id="ccsPosts">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <h6>#css</h6>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="" id="ccsList"></a>
-                            <p id="commentsList"></p>
-                        </li>
+            <div class="hashtagList col-md-4 d-md-block d-none mt-0 mt-4">
 
-                    </ul>
-                </div>
+                <ul class="list-group ">
+
+                    <li class="list-group-item disabled" aria-disabled="true">
+                        <p class="list-gruop-hover fw-bold fs-5 ">#conversar</p>
+                        <p class="fs-12 mb-0">Hilos de discucion dirigidos a toda la comunidad</p>
+                    </li>
+
+                    <li class="list-group-item"><span class="list-gruop-hover fs-6">meme lunes</span>
+                        <p class="fs-12 mb-0">40 comentarios</p>
+                    </li>
+                    <li class="list-group-item"><span class="list-gruop-hover fs-6">Cual es la mejor manera de aprender
+                            a pensar como
+                            programador?</span>
+                        <p class="fs-12 mb-0">2 comentarios</p>
+                    </li>
+                    <li class="list-group-item ">
+                        <div class="row d-flex justify-content-center flex-column ">
+                            <p class="fs-6"><span class="azul">#</span>Kubernete</p>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-warning btn-extra-sm mt-2">Nuevo</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item ">
+                        <div class="row d-flex justify-content-center flex-column">
+                            <p class="fs-6"><span class="azul">#</span>devop</p>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-warning btn-extra-sm mt-2">Nuevo</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item ">
+                        <div class="row d-flex justify-content-center flex-column ">
+                            <p class="fs-6"><span class="azul">#</span>opensource</p>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-warning btn-extra-sm mt-2">Nuevo</button>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item ">
+                        <div class="row d-flex justify-content-center flex-column ">
+                            <p class="fs-6"><span class="azul">#</span>learning</p>
+                            <div class="col-md-4">
+                                <button type="button" class="btn btn-warning btn-extra-sm mt-2">Nuevo</button>
+                            </div>
+                        </div>
+                    </li>
+
+                </ul>
 
 
-                <div class="cardList" id="javascriptPosts">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <h6>#javascript</h6>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="" id="javascriptList"></a>
-                            <p id="commentsList"></p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="cardList" id="reactPosts">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <h6>#react</h6>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="" id="reactList"></a>
-                            <p id="commentsList"></p>
-                        </li>
-                    </ul>
-                </div>
+
+
                 <!--aside right si fondo ni border-->
 
                 <div class="">
